--- a/server/action-server3/torikime/.editorconfig
+++ b/server/action-server3/torikime/.editorconfig
@@ -7,7 +7,9 @@ indent_size = 2
 [rpc-{cpp,hpp}.j2]
 indent_style = tab
 indent_size = 4
+end_of_line = crlf
 
 [rpc-csharp.j2]
 indent_style = space
 indent_size = 4
+end_of_line = crlf
