--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "server/action-server3/externals/eventpp"]
 	path = server/action-server3/externals/eventpp
 	url = https://github.com/wqking/eventpp.git
-[submodule "server/action-server3/externals/gml"]
-	path = server/action-server3/externals/gml
-	url = https://github.com/ilmola/gml.git
+[submodule "server/action-server3/externals/eigen"]
+	path = server/action-server3/externals/eigen
+	url = https://gitlab.com/libeigen/eigen.git
+	branch = 3.4
