--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -16,6 +16,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           lfs: true
+      - uses: actions/setup-python@v3
+        with:
+          python-version: "3.10.2"
+          architecture: "x64"
 
       # Cache
       - uses: actions/cache@v2
@@ -24,6 +28,9 @@ jobs:
           key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
           restore-keys: |
             Library-
+
+      - name: protocol buffers
+        run: sudo apt-get install -yq protobuf-compiler
 
       - name: ⚗Generate RPC
         run: |
