--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -39,8 +39,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install pipenv --upgrade-strategy=only-if-needed
           pipenv install
-          python torikime.py --help
-          python torikime.py -o ../proto/generated -s ../../client/potato/Assets/Scripts/Rpc/Generated" -i ../rpc
+          pipenv install pyyaml jinja2 inflection
+          pipenv run python torikime.py -o ../proto/generated -s ../../client/potato/Assets/Scripts/Rpc/Generated" -i ../rpc
           popd
           ./generate_csharp_proto.sh
           popd
