change namespace potato to torikime

--- a/server/action-server3/rpc/example.yaml
+++ b/server/action-server3/rpc/example.yaml
@@ -5,18 +5,18 @@ contracts:
       imports:
         - "message.proto"
       request:
-        position: potato.Vector3
+        position: torikime.Vector3
       response:
         ok: bool
       notification:
         session_id: int32
-        position: potato.Vector3
+        position: torikime.Vector3
     spawn:
       imports:
         - "message.proto"
       notification:
         session_id: int32
-        position: potato.Vector3
+        position: torikime.Vector3
     despawn:
       notification:
         session_id: int32
