--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         run: sudo apt-get install -yq protobuf-compiler libprotobuf-dev
       # build project
       - name: cmake
+        id: cmake
         run: |
           pushd server/action-server3/torikime
           python -m pip install --upgrade pip
@@ -40,6 +41,12 @@ jobs:
           mkdir build
           cmake -H. -Bbuild -GNinja
           cmake --build build/ --target all
+      - name: run if fail_step failed
+        if: failure() && steps.cmake.outcome == 'failure'
+        run: |
+          echo "${{ steps.cmake.outcome }}"
+          tree server
+          tree client/potato/Assets/Scripts
       # after build
       - name: list output
         run: |
