--- a/server/action-server3/proto/CMakeLists.txt
+++ b/server/action-server3/proto/CMakeLists.txt
@@ -2,11 +2,13 @@ INCLUDE(FindProtobuf)
 FIND_PACKAGE(Protobuf REQUIRED)
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
 
-FILE(GLOB_RECURSE PROTO_SOURCES RELATIVE "${CMAKE_SOURCE_DIR}/proto/" CONFIGURE_DEPENDS "*.proto")
+FILE(GLOB_RECURSE PROTO_SOURCES RELATIVE "${CMAKE_SOURCE_DIR}/proto" CONFIGURE_DEPENDS "*.proto")
 MESSAGE("PROTO_SOURCES: ${PROTO_SOURCES}")
 
 PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${PROTO_SOURCES})
 ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
+
+# INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/proto)
 
 function(HR_PROTOBUF_GENERATE_CSHARP SRCS)
   if(NOT ARGN)
