--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -50,7 +50,7 @@ jobs:
           find ./proto -name "*.proto"
           # protoc --proto_path=./proto --csharp_out=../../client/potato/Assets/Scripts/Proto ./proto/*.proto
           # protoc --proto_path=./proto --csharp_out=../../client/potato/Assets/Scripts/Proto ./proto/generated/*/*.proto
-          protoc --proto_path=./proto --csharp_out=../../client/potato/Assets/Scripts/Proto ./proto/generated/*.proto
+          protoc --proto_path=./proto/generated --csharp_out=../../client/potato/Assets/Scripts/Proto ./proto/generated/*.proto
           popd
 
       - name: list output
