--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -77,6 +77,7 @@ jobs:
         with:
           targetPlatform: StandaloneWindows64
           projectPath: client/potato
+          allowDirtyBuild: true
 
       # # Output
       # - uses: actions/upload-artifact@v2
