--- a/server/action-server3/proto/CMakeLists.txt
+++ b/server/action-server3/proto/CMakeLists.txt
@@ -1,11 +1,22 @@
 INCLUDE(FindProtobuf)
 FIND_PACKAGE(Protobuf REQUIRED)
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
+
+set(Protobuf_DEBUG ON)
 
 FILE(GLOB_RECURSE PROTO_SOURCES RELATIVE "${CMAKE_SOURCE_DIR}/proto/" CONFIGURE_DEPENDS "*.proto")
 MESSAGE("PROTO_SOURCES: ${PROTO_SOURCES}")
 
-PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${PROTO_SOURCES})
-ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
+protobuf_generate_cpp(PROTO_SRC PROTO_HEADER DESCRIPTORS DES ${PROTO_SOURCES})
+MESSAGE("PROTO_SRC: ${PROTO_SRC}")
+MESSAGE("PROTO_HEADER: ${PROTO_HEADER}")
+MESSAGE("DES: ${DES}")
 
-add_dependencies(proto rpc)
+FILE(GLOB_RECURSE PROTO_CPP_SOURCES RELATIVE "${CMAKE_CURRENT_BINARY_DIR}" CONFIGURE_DEPENDS "*.cpp")
+MESSAGE("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
+MESSAGE("PROTO_CPP_SOURCES: ${PROTO_CPP_SOURCES}")
+
+ADD_LIBRARY(proto ${PROTO_SRC})
+
+add_dependencies(proto rpc_generate)
