dump client folder

--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -50,6 +50,7 @@ jobs:
           find ./proto -name "*.proto"
           protoc --proto_path=./proto --csharp_out=../../client/potato/Assets/Scripts/Proto ./proto/*.proto
           popd
+          find client/potato/Assets/Scripts
 
       - name: list output
         run: |
