--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -46,14 +46,10 @@ jobs:
           pipenv install pyyaml jinja2 inflection
           pipenv run python torikime.py -v -o "../proto" -s "../../../client/potato/Assets/Scripts/Rpc/Generated" -i "../rpc"
           popd
-          # ./generate_csharp_proto.sh
-          find ./proto -name "*.proto"
-          protoc --proto_path=./proto --csharp_out=../../client/potato/Assets/Scripts/Proto ./proto/*.proto
-          mkdir -p /tmp/proto/test
-          protoc --proto_path=./proto --csharp_out=/tmp/proto/test ./proto/*.proto
+          ./generate_csharp_proto.sh
+          # find ./proto -name "*.proto"
+          # protoc --proto_path=./proto --csharp_out=../../client/potato/Assets/Scripts/Proto ./proto/*.proto
           popd
-          find client/potato/Assets/Scripts
-          find /tmp/proto/test
 
       - name: list output
         run: |
