--- a/server/action-server3/Dockerfile
+++ b/server/action-server3/Dockerfile
@@ -18,6 +18,6 @@ RUN apt update && apt install -yq \
     && rm -rf /var/lib/apt/lists/*
 
 RUN python3 -m pip install --upgrade pip \
-    pip install pipenv --upgrade-strategy=only-if-needed \
+    pip install pipenv --upgrade-strategy=only-if-needed
 
-    # FROM builder AS action_server3
+# FROM builder AS action_server3
