--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -18,7 +18,7 @@ jobs:
           gcloud auth configure-docker asia-docker.pkg.dev
       - name: Build
         run: |
-          docker build -t asia-northeast1-docker.pkg.dev/potato-343314/potato/server_action-server3 ./server/action-server3/Dockerfile
+          docker build -t asia-northeast1-docker.pkg.dev/potato-343314/potato/server_action-server3 ./server/action-server3/
 
       - name: Push
         run: |
