Skip CI for changes not relevant to the client

--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -3,8 +3,17 @@ name: 📺Game CI
 on:
   push:
     branches: [main]
+    paths:
+      - ".github/workflows/**.yml"
+      - "client/**"
+      - "server/action-server3/torikime/**"
+      - "server/action-server3/rpc/**"
   pull_request:
     branches: [main]
+    paths:
+      - "client/**"
+      - "server/action-server3/torikime/**"
+      - "server/action-server3/rpc/**"
 
 jobs:
   build:
