--- a/server/action-server3/rpc/unit.yaml
+++ b/server/action-server3/rpc/unit.yaml
@@ -5,7 +5,7 @@ contracts:
       imports:
         - "message.proto"
       request:
-        area_id: int32
+        area_id: uint32
       response:
         session_id: int32
         unit_id: uint64
