サーバーのCIはクライアントの更新だけではトリガーされないようにする

--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -11,6 +11,7 @@ on:
   pull_request:
     branches: [main]
     paths:
+      - ".github/workflows/**.yml"
       - "client/**"
       - "server/action-server3/torikime/**"
       - "server/action-server3/rpc/**"
