--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,14 @@ name: build and run test build
 on:
   push:
     branches: [main]
+    paths:
+      - ".github/workflows/**.yml"
+      - "server/**"
   pull_request:
     branches: [main]
+    paths:
+      - ".github/workflows/**.yml"
+      - "server/**"
 
 jobs:
   build-action-server:
