--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           lfs: true
+          submodules: recursive
       - uses: actions/setup-python@v3
         with:
           python-version: "3.10.2"
