--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           lfs: true
           submodules: recursive
-          token: ${{ secrets.PERSONAL_TOKEN }}
+          token: ${{ secrets.ACCESS_TOKEN }}
       - uses: actions/setup-python@v3
         with:
           python-version: "3.10.2"
