--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+          token: ${{ secrets.ACCESS_TOKEN }}
       - uses: seanmiddleditch/gha-setup-ninja@master
       - uses: actions/setup-python@v3
         with:
