--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-      - uses: google-github-actions/setup-gcloud@master
+      - uses: google-github-actions/setup-gcloud@v0
         with:
           service_account_key: ${{ secrets.GCLOUD_AUTH }}
           project_id: potato-343314
