--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+          token: ${{ secrets.ACCESS_TOKEN }}
       - uses: google-github-actions/setup-gcloud@v0
         with:
           service_account_key: ${{ secrets.GCLOUD_AUTH }}
@@ -18,8 +19,8 @@ jobs:
           gcloud auth configure-docker asia-northeast1-docker.pkg.dev
       - name: Build
         run: |
-          docker build -t asia-northeast1-docker.pkg.dev/potato-343314/potato/server_action-server3 ./server/action-server3/
+          docker build -t asia-northeast1-docker.pkg.dev/potato-343314/potato/server_action-server3:${{ github.ref_name }} ./server/action-server3/
 
       - name: Push
         run: |
-          docker push asia-northeast1-docker.pkg.dev/potato-343314/potato/server_action-server3
+          docker push asia-northeast1-docker.pkg.dev/potato-343314/potato/server_action-server3:${{ github.ref_name }}
