--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,11 +68,13 @@ jobs:
           submodules: recursive
           token: ${{ secrets.ACCESS_TOKEN }}
       - name: Build
+        if: ${{ github.event_name == 'pull_request' }}
         run: |
-          docker build -t asia-northeast1-docker.pkg.dev/potato-343314/potato/server_action-server3:${{ github.ref_name }} ./server/action-server3/
-      - name: Push
+          docker build -t build-for-check ./server/action-server3/
+      - name: Build and Push
         if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
         run: |
+          docker build -t asia-northeast1-docker.pkg.dev/potato-343314/potato/server_action-server3:${{ github.ref_name }} ./server/action-server3/
           docker push asia-northeast1-docker.pkg.dev/potato-343314/potato/server_action-server3:${{ github.ref_name }}
   torikime-test:
     runs-on: ubuntu-latest
