--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "client/potato/Assets/ExternalAssets"]
 	path = client/potato/Assets/ExternalAssets
 	url = https://github.com/ttynsmr/potato-external-assets.git
+[submodule "server/action-server3/externals/fmt"]
+	path = server/action-server3/externals/fmt
+	url = https://github.com/fmtlib/fmt.git
