--- a/server/action-server3/CMakeLists.txt
+++ b/server/action-server3/CMakeLists.txt
@@ -36,7 +36,8 @@ ADD_SUBDIRECTORY(externals/eventpp)
 INCLUDE_DIRECTORIES(externals/eigen)
 
 # fmt
-INCLUDE_DIRECTORIES(externals/fmt)
+ADD_SUBDIRECTORY(externals/fmt)
+INCLUDE_DIRECTORIES(externals/fmt/include)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 
@@ -62,7 +63,7 @@ find_package (Threads REQUIRED)
 INCLUDE(FindProtobuf)
 FIND_PACKAGE(Protobuf REQUIRED)
 
-target_link_libraries(action-server3 pthread eventpp ${PROTOBUF_LIBRARY} proto rpc_contracts)
+target_link_libraries(action-server3 pthread eventpp fmt::fmt ${PROTOBUF_LIBRARY} proto rpc_contracts)
 
 set( BOOST_ROOT "/usr/lib/x86_64-linux-gnu/")
 
