ノックバック、硬直、強制移動等サーバーのためのコマンドを実装

--- a/server/action-server3/rpc/diagnosis.yaml
+++ b/server/action-server3/rpc/diagnosis.yaml
@@ -13,3 +13,11 @@ contracts:
       response:
         send_time: int64
         receive_time: int64
+    gizmo:
+      imports:
+        - "message"
+      notification:
+        name: string
+        begin: potato.Vector3
+        end: potato.Vector3
+        color: uint32
