update pip directory

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@
 version: 2
 updates:
   - package-ecosystem: "pip" # See documentation for possible values
-    directory: "/" # Location of package manifests
+    directory: "/server/action-server3/torikime" # Location of package manifests
     schedule:
       interval: "daily"
   - package-ecosystem: "github-actions" # See documentation for possible values
