--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -94,5 +94,5 @@ jobs:
       - uses: actions/upload-artifact@v2
         if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
         with:
-          name: Build
+          name: potato
           path: build
