--- a/server/docker-compose.build-and-run.yml
+++ b/server/docker-compose.build-and-run.yml
@@ -5,6 +5,9 @@ services:
       context: ./action-server3
       dockerfile: Dockerfile
       target: action_server3_application
+    stdin_open: true
+    tty: true
+
     # volumes:
     #   - type: bind
     #     source: ./action-server3
