--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -91,8 +91,8 @@ jobs:
           allowDirtyBuild: true
 
       # Output
-      - uses: actions/upload-artifact@v2
-        if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
-        with:
-          name: potato
-          path: build
+#       - uses: actions/upload-artifact@v2
+#         if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+#         with:
+#           name: potato
+#           path: build
