--- a/client/potato/Assets/Scripts/Core/Core.asmdef
+++ b/client/potato/Assets/Scripts/Core/Core.asmdef
@@ -1,9 +1,8 @@
 {
-    "name": "Rpc",
+    "name": "Core",
     "rootNamespace": "",
     "references": [
-        "GUID:78cd2e4cce174be4e9dd89c6dc4e2e11",
-        "GUID:fd7079b1d6388cb4195321dc9ce5b144"
+        "GUID:78cd2e4cce174be4e9dd89c6dc4e2e11"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
