--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -54,8 +54,7 @@ jobs:
           pushd torikime
           python -m pip install --upgrade pip
           pip install pipenv --upgrade-strategy=only-if-needed
-          pipenv install
-          pipenv install pyyaml jinja2 inflection
+          pipenv sync
           pipenv run python torikime.py -v -o "../proto" -s "../../../client/potato/Assets/Scripts/Rpc/Generated" -i "../rpc"
           popd
           ./generate_csharp_proto.sh
