--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "server/action-server3/externals/fmt"]
 	path = server/action-server3/externals/fmt
 	url = https://github.com/fmtlib/fmt.git
+[submodule "server/action-server3/externals/strong_type"]
+	path = server/action-server3/externals/strong_type
+	url = https://github.com/rollbear/strong_type.git
