--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -108,14 +108,14 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          targetPlatform: ${{ matrix.node }}
+          targetPlatform: ${{ matrix.target }}
           projectPath: client/potato
-          buildsPath: builds/${{ matrix.node }}
+          buildsPath: builds/${{ matrix.target }}
           allowDirtyBuild: true
 
       # Output
       - uses: actions/upload-artifact@v2
         if: ${{ inputs.artifact_windows == 'true' }}
         with:
-          name: potato-${{ matrix.node }}
-          path: builds/${{ matrix.node }}
+          name: potato-${{ matrix.target }}
+          path: builds/${{ matrix.target }}
